Test suite cleanup: resource leaks and warnings